--- a/src/main/webapp/components/account/account.html
+++ b/src/main/webapp/components/account/account.html
@@ -1,12 +1,10 @@
 <li id="zenAccount" class="dropdown" data-ng-if="authentication.isConnected()">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{authentication.userName}} 
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{authentication.getCurrentUserName()}} 
         <span class="caret"></span>
     </a>
     <ul class="dropdown-menu">
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Subscription</a></li>
+        <li><a class="btn-link" data-ng-click="account.goToSettings()">Settings</a></li>
         <li role="separator" class="divider"></li>
-        <li><a href="#">Logout</a></li>
+        <li><a class="btn-link" data-ng-click="account.logout()">Logout</a></li>
   </ul>
 </li>
-<li data-ng-if="authentication.isNotConnected()"><a data-ng-click="account.login()">Login</a></li>
