--- a/src/main/webapp/components/navigation/navigation.html
+++ b/src/main/webapp/components/navigation/navigation.html
@@ -9,7 +9,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#" ui-sref="root.home">Dont Worry Be Zen</a>
+	      <a class="navbar-brand" ui-sref="root.home">Dont Worry Be Zen</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +18,7 @@
 	        <li><a ui-sref="root.store">Store</a><li>
 	        <li><a ui-sref="root.myActivities">My Activities</a></li>
 	        <li class="dropdown" data-ng-if="authentication.isAdmin()">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage<span class="caret"></span></a>
+	          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage<span class="caret"></span></a>
 	          <ul class="dropdown-menu">
 	            <li><a class="btn-link" data-ng-click="navigation.goToUsers()">Users</a></li>
 	            <li role="separator" class="divider"></li>
@@ -33,8 +33,9 @@
 	        </li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#" ui-sref="root.basket">Basket</a></li>
-	        <zen-account><zen-account>
+	        <li><a ui-sref="root.basket">Basket</a></li>
+	        <li data-ng-if="authentication.isNotConnected()"><a class="btn-link" data-ng-click="navigation.login()">Login</a></li>
+	        <zen-account data-ng-if="authentication.isConnected()"><zen-account>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
